<resources>
    <string name="app_name">WeGotCups</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="wrongEmail">Wrong email format!</string>
    <string name="wrongNewEmail">Wrong email format!</string>
    <string name="shortNewPassword">The password is too short!</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="nameTextField">Name</string>
    <string name="wrongNewName">Wrong name format</string>
    <string name="wrongRepeatPassword">Passwords do not match</string>
    <string name="cancel">Cancel</string>
    <string name="userTag">User @ tag</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="select_date"> Select date</string>
    <string name="select_time"> Select time</string>
    <string name="event_name">Event name</string>
    <string name="skip">Skip</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="dress_code">Dress code</string>
    <string-array name="dress_code_styles">
        <item>Formal</item>
        <item>Business</item>
        <item>Smart casual</item>
        <item>Casual</item>
    </string-array>
    <string name="i_will_bring">I will bring…</string>
    <string name="voting">Voting</string>
    <string name="spotify_playlist">Spotify playlist</string>
    <string name="add_section">Add section</string>
    <string name="done">Done</string>
    <string name="menu">Menu</string>
    <string name="events">Events</string>
    <string name="wegotcups">WeGotCups</string>
    <string name="email">Email</string>
    <string name="edit_picture_or_avatar">Edit profile data</string>
    <string name="add_person_to_the_event">Add person to the event</string>
    <string name="add_person">Add person</string>
    <string name="add_task">Add task</string>
    <string name="my_friends">My friends</string>
    <string name="username">Username</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="spotify_more"><a href="https://support.spotify.com/us/article/collaborative-playlists/">More</a></string>
    <string name="hint_create_a_collaborative_playlist_and_share_it_with_your_friends">Hint: Create a Collaborative playlist and share it with your friends.</string>
    <string name="tasks">Tasks</string>
    <string name="create_new_task">Create new task</string>
    <string name="my_events">My events</string>
    <string name="joke">What to hear a joke about paper? Never mind, it\'s tearable.</string>
    <string name="Organizer">Organizer</string>
</resources>